syntax = "proto3";

option go_package = "/pb";



message profileDetailsResponse {
    string Email =1;
    string UserName =2;
    string FirstName =3;
    string LastName =4;
    string BirthDate =5;
    string City = 6;
    string Country = 7;
    int32 Gender = 8;
    string Bio = 9;
    string State = 10;
    string JoiningDate = 11;
    string Message = 12;
    string image = 13;
}

message profileDetailsRequest{
    string AccessToken =1;
}

message editProfileRequest{
    string CurrentPassword = 1;
    string FirstName = 2;
    string LastName= 3;
    string City = 4;
    string Country = 5;
    string Bio = 6;
    string NewPassword=7;
    string AccessToken=8;
}

message editProfileResponse{
    string Message = 1;
}


message ImageRequest {
    bytes image_data = 1;
    string AccessToken =2 ;
  }

message ImageResponse {
    string Message = 1;
  }

service UserProfile {
    rpc ProfileDetails(profileDetailsRequest) returns (profileDetailsResponse);
    rpc EditProfile(editProfileRequest) returns (editProfileResponse);
    rpc UploadImage (ImageRequest) returns (ImageResponse);
}